# ai-test-engineering-codex-hackathon

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  k8s-deploy.yml  vercel-preview.yml  vercel-production.yml
app/: cli.py  main.py
app/api/: routes.py
app/core/: config.py
app/db/: __init__.py  auth_repository.py  models.py  repository.py  session.py  upload_repository.py
app/models/: schemas.py
app/services/: auth.py  debugger.py  executor.py  github_importer.py  google_auth.py  openai_test_writer.py  orchestrator.py  planner.py  repository_analyzer.py  selenium_probe.py  test_generator.py
app/static/: agents.js  app.js  auth.js  playbooks.js  profile.js  reports.js  session.js  styles.css  upload.js
app/templates/: agents.html  index.html  login.html  playbooks.html  profile.html  reports.html  run.html  signup.html
app/utils/: files.py
automation/: run_tests.py
k8s/: app-config.yaml  app-secret.example.yaml  app.yaml  ingress.yaml  kustomization.yaml  mysql-secret.example.yaml  mysql.yaml  namespace.yaml
samples/demo_repo/: math_utils.py
tests/: conftest.py  test_auth_api.py  test_smoke.py  test_upload_support.py
tests/e2e/: test_user_journey.py
tests/integration/: test_orchestrator_flow.py
tests/unit/: test_auth_service.py  test_debugger_service.py  test_executor_service.py  test_openai_test_writer_service.py  test_planner_service.py  test_repository_analyzer_service.py  (+1 more)
tmp/: debug_imports.py  test_openai_key.py
workspace/: app.db
(+7 files in other folders)
