[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-test-engineer"
version = "1.0.0"
description = "A powerful AI-driven test engineering platform for automated test generation and execution."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Codex Hackathon Team"}
]
dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "pydantic==2.11.7",
    "pytest==8.4.1",
    "pytest-cov==6.1.1",
    "python-multipart==0.0.20",
    "openai>=2.30.0",
    "SQLAlchemy==2.0.43",
    "PyMySQL==1.1.1",
    "psycopg[binary]==3.2.9",
    "cryptography==45.0.7",
    "python-dotenv==1.1.1",
    "google-auth==2.40.3",
    "requests==2.32.3",
    "selenium==4.32.0",
]

[project.scripts]
ai-test-engineer = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"app" = ["static/**/*", "templates/**/*"]
